anna (1.11) UNRELEASED; urgency=low

  * Joey Hess
    - Build with -fomit-frame-pointer, saves a few bytes.

 -- Joey Hess <joeyh@debian.org>  Wed, 15 Jun 2005 16:22:59 -0400

anna (1.10) unstable; urgency=low

  * Joey Hess
    - Fix hardcoded path to archdetect.

 -- Joey Hess <joeyh@debian.org>  Mon, 23 May 2005 10:21:03 -0400

anna (1.09) unstable; urgency=low

  * Colin Watson
    - Fix typo in "unknown udeb" error message.
  * Joey Hess
    - Switch from using the debconf template to get the subarch, to running
      the archdetect command.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Kostas Papadimas
    - Basque (eu.po) by Piarres Beobide
    - Hebrew (he.po) by Lior Kaplan
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes

 -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2005 18:07:28 -0400

anna (1.08) unstable; urgency=low

  * Colin Watson
    - Fix log message when installing a package due to the anna-install
      queue.
    - Install kernel module udebs if the name they provide is queued, so
      that 'anna-install ext2-modules' works as expected.
    - Add anna/standard_modules question (never asked, only for preseeding).
      If false, udebs will not be automatically installed merely due to
      having Priority >= standard, although Priority >= standard kernel
      modules will still be installed. Originally Ubuntu bug #5258.
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team

 -- Colin Watson <cjwatson@debian.org>  Thu,  5 May 2005 16:22:49 +0100

anna (1.07) unstable; urgency=low

  * Not for sarge.
  * Joey Hess
    - Removed load-installer udeb, since it's no longer used, having been
      replaced by download-installer, etc.
    - Removed code in anna to present a list of retreivers. Now anna must
      always be run with an argument. Closes: #216084, #218774
    - Also removed template for this question.
    - Removed code to notice new retreivers and exit specially, since